Diet AI responses: limit to ~25 chars per point

--- a/index.html
+++ b/index.html
@@ -348,14 +348,11 @@
 
 【ジェームズへの厳命】:
 1. 事象への即応: 場所や選択済みの情報は把握している。音声入力された「事象とそれによるリスク」に全知能を集中せよ。
-2. 介護記録文脈の徹底: 
-   「〇〇（原因）だったから、次からは〇〇（具体的な対策）を徹底する」
-   「〇〇（リスク）を回避するため、〇〇（予防）に努める」
-   という、介護記録としてそのまま使える、かつ因果関係の明確な文章を書け。
+2. 介護記録文脈の徹底: 因果関係が明確で、かつ「25文字前後の簡潔な一言」で対策を表現せよ。
 3. 抽象論を排し、物理的対策を出せ。
 
 【回答形式】:
-以下の6視点【環境】【声掛け】【用具】【見守り】【共有】【心理】で、各1〜2行。
+以下の6視点【環境】【声掛け】【用具】【見守り】【共有】【心理】で、各項目「25文字前後の簡潔な一言」で提示せよ。
 各回答の冒頭には視点名を記し、番号ラベル（視点1等）は一切不要。速やかに内容のみを提示せよ。`,
                         user: "carepro-user", response_mode: "blocking"
                     })
@@ -366,12 +363,12 @@
             } catch (e) {
                 const action = text.includes("落ち") ? "転落" : text.includes("滑") ? "転倒" : text.includes("むせ") ? "誤飲" : "動作";
                 displaySolutions([
-                    `【環境】${location}での${action}リスクに対し、周辺の整理整頓と足元の安全確認を徹底し、物理的な不安要素を排除します。`,
-                    `【声掛け】${action}の兆候が見られた際、一呼吸置かせる「ゆっくりと」の声掛けを介助の要所に組み込み、意識の不一致を防ぎます。`,
-                    `【用具】${location}で使用する備品の状態を再点検し、本来の${action}防止機能が100%発揮されるよう、常に最適な配置に努めます。`,
-                    `【見守り】${action}が発生しやすい動作の瞬間は、介助者の視線を外さず、物理的な防護距離を確実に保つ見守りを継続します。`,
-                    `【共有】今回の${location}での${action}事案を直ちに全体共有し、同様の危険箇所がないか全パラメター（全スタッフ）で一斉点検いたします。`,
-                    `【心理】慣れによる「いつもの動作」に潜む油断を再認識。${location}に立つ一歩目から、プロとしての高い緊張感で介助に臨みます。`
+                    `【環境】${location}での${action}リスクに対し、周辺整理と足元確認を徹底。`,
+                    `【声掛け】${action}兆候時、一呼吸置かせる「ゆっくり」の声を組み込む。`,
+                    `【用具】${location}の備品を点検し、本来の${action}防止機能を配置。`,
+                    `【見守り】${action}発生の瞬間は視線を外さず、防護距離を確実に保持。`,
+                    `【共有】今回事案を全体共有し、全スタッフで危険箇所を一斉点検。`,
+                    `【心理】慣れによる油断を再認識。プロの高緊張感で${location}介助に臨む。`
                 ]);
             }
             loading.style.display = 'none';
