--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
             margin-bottom: 8px;
             outline: none;
         }
+
+        #historyArea {
+            width: 100%;
+            max-width: 550px;
+            margin-top: 30px;
+            display: none;
+        }
     </style>
 </head>
 
@@ -341,35 +348,46 @@
                     headers: { 'Authorization': `Bearer ${API_KEY}`, 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         inputs: {},
-                        query: `あなたは主君の記録を支える忠実な執事「ジェームズ」です。
-主君から報告された「${location}」での「事象」と「リスク」を深く汲み取り、スタッフの意識を瞬時に引き締める【即応対策】を提示せよ。
+                        query: `あなたは介護現場のあらゆるリスクを知り尽くした、迅速かつ冷静な執事兼専門家「ジェームズ」です。
+主臣から報告された「${location}」でのヒヤリハットに対し、曖昧な意識論（徹底・努める）を一切排し、今すぐ実行できる「具体的かつ物理的な介入策」を提示せよ。
 
-【主君からの報告】: "${text}"
+【主臣からの報告】: "${text}"
 
-【ジェームズへの厳命】:
-1. 事象への即応: 場所や選択済みの情報は把握している。音声入力された「事象とそれによるリスク」に全知能を集中せよ。
-2. 介護記録文脈の徹底: 因果関係が明確で、かつ「25文字前後の簡潔な一言」で対策を表現せよ。
-3. 抽象論を排し、物理的対策を出せ。
+【ジェームズへの鉄則】:
+1. 専門家目線: 報告の表面的な言葉をなぞるのではなく、介護のプロとして背後のリスクを予測せよ。
+2. 物理的介入の義務: 「テーブルを分ける」「手の届かない位置に置く」「個別誘導にする」「自助具を変更する」等の物理的動作・配置の変更を優先せよ。
+3. 定型回答の厳禁: 類似事象でも状況に応じた独自の対策を出せ。同じ「転落」でもベッド周囲と椅子では物理的要因が異なる。
+4. スリム化: 回答は5項目に厳選せよ（共有は不要）。
 
 【回答形式】:
-以下の6視点【環境】【声掛け】【用具】【見守り】【共有】【心理】で、各項目「25文字前後の簡潔な一言」で提示せよ。
-各回答の冒頭には視点名を記し、番号ラベル（視点1等）は一切不要。速やかに内容のみを提示せよ。`,
+以下の5視点【環境】【声掛け】【用具】【見守り】【心理】で、各25文字前後の簡潔な一言で提出せよ。視点名のみを記し、番号は不要。`,
                         user: "carepro-user", response_mode: "blocking"
                     })
                 });
                 const data = await response.json();
-                const solutions = data.answer.split('\n').filter(s => s.length > 5).slice(0, 6);
+                const solutions = data.answer.split('\n').filter(s => s.length > 5).slice(0, 5);
                 displaySolutions(solutions);
             } catch (e) {
-                const action = text.includes("落ち") ? "転落" : text.includes("滑") ? "転倒" : text.includes("むせ") ? "誤飲" : "動作";
-                displaySolutions([
-                    `【環境】${location}での${action}リスクに対し、周辺整理と足元確認を徹底。`,
-                    `【声掛け】${action}兆候時、一呼吸置かせる「ゆっくり」の声を組み込む。`,
-                    `【用具】${location}の備品を点検し、本来の${action}防止機能を配置。`,
-                    `【見守り】${action}発生の瞬間は視線を外さず、防護距離を確実に保持。`,
-                    `【共有】今回事案を全体共有し、全スタッフで危険箇所を一斉点検。`,
-                    `【心理】慣れによる油断を再認識。プロの高緊張感で${location}介助に臨む。`
-                ]);
+                const action = text.includes("落ち") ? "転落" : text.includes("滑") ? "転倒" : text.includes("むせ") ? "誤飲" : text.includes("食べ") ? "異食/横取り" : "動作";
+                let fb = [];
+                if (action === "異食/横取り") {
+                    fb = [
+                        `【環境】テーブルの間隔を空け、手の届かない距離に配置。`,
+                        `【声掛け】「こちらは後で」と器を遠ざけ、意識を逸らす。`,
+                        `【用具】器の下に滑り止めを敷き、安易に移動不可にする。`,
+                        `【見守り】配膳時、特定の方の正面には常にスタッフを配置。`,
+                        `【心理】「もっと食べたい」欲求を汲み、代替品を即座に提示。`
+                    ];
+                } else {
+                    fb = [
+                        `【環境】${location}の物理的導線を変更し、接触リスクを排除。`,
+                        `【声掛け】動作に対し「一旦ストップ」等の具体的指示を出す。`,
+                        `【用具】${action}防止に特化した福祉用具への切り替えを検討。`,
+                        `【見守り】${action}発生の瞬間を予測。防護距離を確実に保持。`,
+                        `【心理】焦りや戸惑いを見抜き、安心感を与える介入を優先。`
+                    ];
+                }
+                displaySolutions(fb);
             }
             loading.style.display = 'none';
         }
@@ -428,7 +446,7 @@
         window.onload = init;
     </script>
 
-    <div id="historyArea" style="width:100%;max-width:550px;margin-top:30px;display:none;">
+    <div id="historyArea">
         <div style="font-size:14px;font-weight:bold;margin-bottom:10px;">📍 本日の登録履歴</div>
         <div id="historyList"></div>
     </div>
