--- a/index.html
+++ b/index.html
@@ -430,6 +430,6 @@
         <div style="font-size:14px;font-weight:bold;margin-bottom:10px;">📍 本日の登録履歴</div>
         <div id="historyList"></div>
     </div>
-</body>
+<div id="debugLog" style="position:fixed;bottom:0;left:0;width:100%;max-height:150px;overflow-y:auto;background:rgba(0,0,0,0.8);color:#0f0;font-size:10px;z-index:9999;display:none;padding:5px;font-family:monospace;"></div><script>window.onerror=function(m,s,l,c,e){document.getElementById("debugLog").style.display="block";document.getElementById("debugLog").innerHTML+="[ERROR] "+m+"<br>";};const originalFetch=window.fetch;window.fetch=async(...args)=>{const res=await originalFetch(...args);if(args[0].includes("dify.ai")){const clone=res.clone();const text=await clone.text();document.getElementById("debugLog").style.display="block";document.getElementById("debugLog").innerHTML+="[Dify Response] "+res.status+" "+text.substring(0,100)+"...<br>";}return res;};</script></body>
 
 </html>
