--- a/index.html
+++ b/index.html
@@ -377,10 +377,15 @@
             if (el.classList) el.classList.add('selected');
             const data = {
                 date: new Date().toLocaleString('ja-JP'),
-                time: new Date().getHours() + "時台",
-                user: selUser.value || '不明', patient: selPatient.value || '不明',
-                location: selLocation.value || '現場', scene: selScene.value || '不詳',
-                content: inputText.value, solution: s
+                time: new Date().getHours() + "時台", // 時間帯
+                user: selUser.value || '不明',         // B: 報告者
+                patient: selPatient.value || '不明',   // C: 利用者
+                location: selLocation.value || '現場', // D: 場所
+                content: inputText.value,              // E: 事象内容 (content)
+                report: inputText.value,               // E: 事象内容 (report)
+                solution: s,                           // F: 決定対策 (solution)
+                measure: s,                            // F: 決定対策 (measure)
+                scene: selScene.value || '不詳'         // G: シーン
             };
             try {
                 await fetch(GAS_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(data) });
