--- a/index.html
+++ b/index.html
@@ -377,15 +377,17 @@
             if (el.classList) el.classList.add('selected');
             const data = {
                 date: new Date().toLocaleString('ja-JP'),
-                time: new Date().getHours() + "時台", // 時間帯
+                time: new Date().getHours() + '時台',
                 user: selUser.value || '不明',         // B: 報告者
                 patient: selPatient.value || '不明',   // C: 利用者
                 location: selLocation.value || '現場', // D: 場所
+                occurrence: inputText.value,           // E: 事象内容 (occurrence)
                 content: inputText.value,              // E: 事象内容 (content)
                 report: inputText.value,               // E: 事象内容 (report)
+                aiResponse: s,                         // F: 決定対策 (aiResponse)
                 solution: s,                           // F: 決定対策 (solution)
                 measure: s,                            // F: 決定対策 (measure)
-                scene: selScene.value || '不詳'         // G: シーン
+                scene: selScene.value || '不詳'        // G: シーン
             };
             try {
                 await fetch(GAS_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(data) });
